backup/metadata/objects/Resident_Preference__c/Resident_Preference__c.object-meta.xml
<CustomObject>
    <label>Resident Preference</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Resident Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resident Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>