backup/metadata/objects/Resident_Preference__c/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preference</label>
    <referenceTo>Preference__c</referenceTo>
    <relationshipLabel>Resident Preferences</relationshipLabel>
    <relationshipName>Resident_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>