backup/metadata/objects/Resident_Preference__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resident Preferences</relationshipLabel>
    <relationshipName>Resident_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>