backup/metadata/objects/Resident_Preference__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>